<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/realbgforapp"
    tools:context=".domain.presentation.auth_or_reg">

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/passwords"
        android:inputType="textPassword"
        android:maxLength="12"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#2196F3"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="115dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registrN"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="56dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:fontFamily="times"
        android:text="←"
        android:textColor="#FFEBEB"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/logIn"
        android:textColor="#C9FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mains"
        android:layout_width="240dp"
        android:layout_height="59dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="62dp"
        android:backgroundTint="#C94B9EF8"
        android:shadowColor="#FFFFFF"

        android:text="@string/regs"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:rippleColor="#E62727"
        app:strokeColor="#FFFFFF" />

    <EditText
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="37dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/emails"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textColor="#FFF4F4"
        android:textColorHighlight="#2196F3"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>