<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/realbgforapp"
    tools:context=".domain.presentation.Auth">

    <TextView
        android:id="@+id/exit3"
        android:layout_width="56dp"
        android:layout_height="66dp"


        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="times"
        android:text="←"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editmail"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/emails"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:textColor="#FFF4F4"
        android:textColorHighlight="#000000"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editpass"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/passwords"
        android:inputType="textPassword"
        android:maxLength="12"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#191919"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editmail" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="113dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/authorize"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/blog"
        android:layout_width="240dp"
        android:layout_height="59dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="62dp"
        android:backgroundTint="#C94B9EF8"
        android:text="@string/logIn"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editpass" />


</androidx.constraintlayout.widget.ConstraintLayout>