<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgforprofile"
    tools:context=".domain.presentation.profilevolunteer" >

    <TextView
        android:id="@+id/typeofvolunteer"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/volunteer"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/namesecname3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarsvolunt" />

    <TextView
        android:id="@+id/userage2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="50"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/preage"
        app:layout_constraintTop_toBottomOf="@+id/phone2" />

    <TextView
        android:id="@+id/preage"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/aged"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="Номер:"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/phone2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datainfo3" />

    <ProgressBar

        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/phoner"
        android:textColor="#FFF4F4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/datainfo3" />

    <TextView
        android:id="@+id/datainfo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="107dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/data"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namesecname3" />

    <TextView
        android:id="@+id/namesecname3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="107dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/namef"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeofvolunteer" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatarsvolunt"
        android:layout_width="179dp"
        android:layout_height="162dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profileman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearprof"
        app:shapeAppearanceOverlay="@style/Circular" />

    <LinearLayout
        android:id="@+id/linearprof"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/squarefortext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <TextView
        android:id="@+id/exit3"
        android:layout_width="56dp"
        android:layout_height="66dp"


        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="times"
        android:text="←"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearprof" />

    <TextView
        android:id="@+id/profilesvolunt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/profile"
        android:textColor="#535353"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearprof"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/profiled"
            android:layout_width="135dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/toprofileclicked" />

        <ImageView
            android:id="@+id/myaccepted"
            android:layout_width="135dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/task" />

        <ImageView
            android:id="@+id/searchtask"
            android:layout_width="135dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/loupe"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="581dp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>