<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bgforprofile"
    tools:context=".domain.presentation.profile">

    <TextView
        android:id="@+id/exit3"
        android:layout_width="56dp"
        android:layout_height="66dp"


        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="times"
        android:text="←"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearprofzak" />

    <LinearLayout
        android:id="@+id/linearprofzak"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/squarefortext"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <TextView
        android:id="@+id/profiles"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/profile"
        android:textColor="#535353"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatars"
        android:layout_width="179dp"
        android:layout_height="162dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="117dp"
        android:src="@drawable/profileman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearprofzak"
        app:shapeAppearanceOverlay="@style/Circular" />

    <TextView
        android:id="@+id/namesecname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="107dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/namef"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/types" />

    <TextView
        android:id="@+id/datainfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="107dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/data"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namesecname" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="sans-serif-medium"
        android:text="Номер:"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datainfo" />

    <TextView
        android:id="@+id/beforeage"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/aged"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/types"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/typeuser"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/namesecname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatars" />

    <TextView
        android:id="@+id/userage"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="50"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/beforeage"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/phoner"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/datainfo" />

    <ProgressBar

        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="47dp"

        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/toprofile"
            android:layout_width="105dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/toprofileclicked"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="408dp" />

        <ImageView
            android:id="@+id/mytasks"
            android:layout_width="105dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/task"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="473dp" />

        <ImageView
            android:id="@+id/addtask"
            android:layout_width="105dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/addtask" />

        <ImageView
            android:id="@+id/call"
            android:layout_width="105dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/phonecall"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="478dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>